Add Venue and Create Event complete

--- a/src/views/hostDashboard.ejs
+++ b/src/views/hostDashboard.ejs
@@ -26,6 +26,9 @@
     <p>Customer Support: <%= host.supportContactInfo %></p>
     <br>
     <hr>
+    <a href="/host/<%= host.id %>/dashboard/venue">Your Venues</a>
+    <br>
+    <hr>
     <a href="/host/<%= host.id %>/dashboard/list-new-events">List an event</a>
     <hr>
     <a href="/host/<%= host.id %>/dashboard/reschedule-events">Reschedule event</a>
