--- a/src/views/userPages/userProfile.ejs
+++ b/src/views/userPages/userProfile.ejs
@@ -15,5 +15,9 @@
     <br>
     <br>
     <a href="/user/:userId/user-sign-out">Sign Out</a>
+    <hr>
+    <a href="/user//<%= user.id %>/profile/my-tickets">My Tickets</a>
+    <hr>
+    <a href="/events">Events</a>
 </body>
 </html>
