--- a/src/views/hostPages/addVenuePage.ejs
+++ b/src/views/hostPages/addVenuePage.ejs
@@ -8,7 +8,7 @@
 <body>
     <h2>Add Venues Here</h2>
     <hr>
-    <form action="/host/<%= host.id %>/dashboard/venue/add-venue" method="post">
+    <form action="/host/dashboard/venue/add-venue" method="post">
         <label for="name">Venue Name</label>
         <input type="text" name="name" placeholder="Enter Venue Name" required>
         <br>
