--- a/src/views/hostPages/venuePage.ejs
+++ b/src/views/hostPages/venuePage.ejs
@@ -19,6 +19,6 @@
     <% } %>
     <hr>
     <br>
-    <a href="/host/<%= host.id %>/dashboard/venue/add-venue">Add Venue</a>
+    <a href="/host/dashboard/venue/add-venue">Add Venue</a>
 </body>
 </html>
