--- a/src/views/userPages/userEditProfile.ejs
+++ b/src/views/userPages/userEditProfile.ejs
@@ -14,7 +14,7 @@
     <br>
     <hr>
     <h3>Personal Details</h3>
-    <form action="/user/<%= user.id %>/profile/edit-profile" method="post">
+    <form action="/user/profile/edit-profile" method="post">
         <label for="fullName">Full Name</label>
         <input type="name" value="<%= user.fullName %>" name="fullName">
         <br>
