--- a/src/views/userPages/userProfile.ejs
+++ b/src/views/userPages/userProfile.ejs
@@ -11,12 +11,12 @@
     <br>
     <p>Name: <%= user.fullName %></p>
     <p>Email: <%= user.email %></p>
-    <a href="/user/<%= user.id %>/profile/edit-profile">Edit Profile</a>
+    <a href="/user/profile/edit-profile">Edit Profile</a>
     <br>
     <br>
-    <a href="/user/:userId/user-sign-out">Sign Out</a>
+    <a href="/user/user-sign-out">Sign Out</a>
     <hr>
-    <a href="/user//<%= user.id %>/profile/my-tickets">My Tickets</a>
+    <a href="/user/profile/my-tickets">My Tickets</a>
     <hr>
     <a href="/events">Events</a>
 </body>
