--- a/src/views/hostProfile.ejs
+++ b/src/views/hostProfile.ejs
@@ -9,7 +9,7 @@
     <h2>Welcome to your profile <%= host.name %></h2>
     <hr>
     <h3>Business Information</h3>
-    <form action="/host//:hostId/dashboard/edit-profile" method="post">
+    <form action="/host/dashboard/edit-profile" method="post">
         <div>
             <label for="companyName">Company Name: </label>
             <input type="text" name="companyName" placeholder="Enter company name">
