--- a/src/views/userPages/userProfile.ejs
+++ b/src/views/userPages/userProfile.ejs
@@ -14,10 +14,12 @@
     <a href="/user/profile/edit-profile">Edit Profile</a>
     <br>
     <br>
-    <a href="/user/user-sign-out">Sign Out</a>
+    <a href="/events">Events</a>
     <hr>
     <a href="/user/profile/my-tickets">My Tickets</a>
     <hr>
-    <a href="/events">Events</a>
+    <a href="/user/profile/user-change-password">Change Password</a>
+    <hr>
+    <a href="/user/user-sign-out">Sign Out</a>
 </body>
 </html>
