change host password feature complete

--- a/src/views/hostDashboard.ejs
+++ b/src/views/hostDashboard.ejs
@@ -35,6 +35,8 @@
     <hr>
     <a href="/host/dashboard/cancel-events">Cancel event</a>
     <hr>
+    <a href="/host/dashboard/host-change-password">Change Password</a>
+    <br>
     <br>
     <a href="/host/hostlogout" role="button">Log Out</a>
 </html>
