resolved testing bugs

--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>E-Ticket</title>
 </head>
 <body>
     <h1>HOME PAGE</h1>
     <hr>
-    <br>
-    <a href="/user-login">Log In</a>
+    <p>Get your tickets NOW</p>
+    <a href="/events">Events</a>
     <hr>
-    <br>
-    <a href="/user-register">Sign Up</a>
+    <p>Go to your Profile</p>
+    <a href="/user">Go to user page</a>
     <hr>
-    <br>
+    <p>Want to host an Event? Click below to become a Host</p>
     <a href="/host">Host an Event</a>
 </body>
 </html>
