user aadhaar kyc complete

--- a/src/views/userPages/userEditProfile.ejs
+++ b/src/views/userPages/userEditProfile.ejs
@@ -10,7 +10,7 @@
     <hr>
     <h3>Account Details</h3>
     <p>Email Address: <%= user.email %></p>
-    <p>Mobile Number: <%= user.phone %></p>
+    <p>Mobile Number: <%= maskedUserPhoneNumber %></p>
     <br>
     <hr>
     <h3>Personal Details</h3>
