--- a/src/views/userPages/userProfile.ejs
+++ b/src/views/userPages/userProfile.ejs
@@ -11,9 +11,12 @@
     <br>
     <p>Name: <%= user.fullName %></p>
     <p>Email: <%= user.email %></p>
+    <a href="/user/profile/user-ekyc">e-Kyc</a>
+    <br>
+    <hr>
     <a href="/user/profile/edit-profile">Edit Profile</a>
     <br>
-    <br>
+    <hr>
     <a href="/events">Events</a>
     <hr>
     <a href="/user/profile/my-tickets">My Tickets</a>
