--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,21 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-onest), sans-serif;
+}
+/* Hide scrollbar but keep scrolling functionality */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* Hide scrollbar in IE/Edge */
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #c9c1c1;
-    --foreground: #181414;
-  }
+/* styles/globals.css */
+:root {
+  --swiper-theme-color: #14b8a6; /* Change active bullet color */
 }
-*/
-body {
-  font-family: Arial, Helvetica, sans-serif;
+
+.swiper-pagination-bullet {
+  background-color: #d1d5db !important; /* Default color (gray) */
+  opacity: 0.7;
+  width: 12px;
+  height: 12px;
+  transition: background-color 0.3s ease-in-out;
 }
+
+.swiper-pagination-bullet-active {
+  background-color: #14b8a6 !important; /* Active color (teal-500) */
+  opacity: 1;
+  width: 16px; /* Slightly bigger for effect */
+  height: 16px;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -79,4 +98,4 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-} 
+}
